update menu
